<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always|collapseActionView"
        android:title="Search"/>



    <item
        android:id="@+id/home2"
        android:title="@string/home2" />
    <item
        android:id="@+id/allpdf"
        android:title="@string/all_pdf" />
    <item
        android:id="@+id/english"
        android:title="@string/english" />
    <item
        android:id="@+id/englishgrammar"
        android:title="@string/englishgrammar" />
    <item
        android:id="@+id/englishvocabulary"
        android:title="@string/englishvocublary" />
    <item
        android:id="@+id/phonics"
        android:title="@string/phonics" />



</menu>
