<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_favouritenew" />

    <item
        android:id="@+id/navigation_recent"
        android:icon="@drawable/ic_recent_black_24dp"
        android:title="@string/title_recentnew" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_setting" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/title_info" />

</menu>
