<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setting_rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true">

        <RadioGroup
            android:id="@+id/rg_fontsize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <TextView
                android:id="@+id/tv_fontSizeTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/fontSize" />

            <RadioButton
                android:id="@+id/radio_font_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/fontSizeSmall" />
            <RadioButton
                android:id="@+id/radio_font_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/fontSizeNormal" />
            <RadioButton
                android:id="@+id/radio_font_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/fontSizeLarge" />
            <RadioButton
                android:id="@+id/radio_font_extra_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/fontSizeExtraLarge" />

        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardUseCompatPadding="true">

        <RadioGroup
            android:id="@+id/rg_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_themeTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/themeTitle" />

            <RadioButton
                android:id="@+id/radio_theme_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/themeDay" />

            <RadioButton
                android:id="@+id/radio_theme_night"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/themeNight" />

        </RadioGroup>

    </androidx.cardview.widget.CardView>

</LinearLayout>
