<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:background="@color/white"
    android:layout_gravity="center_vertical"
    android:id="@+id/playerLayout"
    android:visibility="gone"
    >
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:src="@drawable/musiclist"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:contentDescription="@string/cover" />




    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="@dimen/project_small_gap"
        android:background="@android:color/transparent"
        android:src="@drawable/admob_close_button_black_circle_white_cross"
    android:contentDescription="@string/close_button_description"
     android:minHeight="@dimen/project_touch_target" />



    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/title"
        android:maxLines="4"
        android:layout_toEndOf="@id/imgLogo"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/txtSongTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/black"
        android:background="@null"
        android:padding="@dimen/project_small_gap"
        android:text="@string/_00_00_00"
        android:layout_marginEnd="15dp"
        tools:ignore="RelativeOverlap" />
    <TextView
        android:id="@+id/txtStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/imgLogo"
        android:text="@string/_00_00_00_"
        android:padding="@dimen/project_small_gap"
        android:textColor="@color/black"
        android:background="@null"
        android:layout_marginStart="15dp"

        />
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sb"
        android:layout_toEndOf="@id/imgLogo"
        android:layout_below="@id/txtSongTime"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="@dimen/project_small_gap"
        android:layout_marginTop="10dp"
        />

    <ImageButton
        android:id="@+id/btnRepeatOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sb"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_repeat_one_black"
        android:contentDescription="@string/btnrepet"

         android:minHeight="@dimen/project_touch_target" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRepeatOne"
        android:layout_toEndOf="@id/imgLogo"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/btnLayout"
        >

        <ImageButton
            android:id="@+id/btnPrev"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_skip_previous_24"
            android:contentDescription="@string/btnprev"  android:minHeight="@dimen/project_touch_target" />
        <ImageButton
            android:id="@+id/btnPlay"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_play_arrow_24"
            android:contentDescription="@string/btnplay"  android:minHeight="@dimen/project_touch_target" />
        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_skip_next_24"
            android:contentDescription="@string/btnnext"  android:minHeight="@dimen/project_touch_target" />
    </LinearLayout>
</RelativeLayout>