<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/transparent"
    android:padding="0dp"
    >

    <TextView
        android:id="@+id/gameover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="-20dp"
        android:fontFamily="@font/beyond_wonderland"
        android:gravity="center"
        android:text="@string/game_over"
        android:textSize="65sp"
        android:textColor="#FF0000"
        tools:ignore="TextContrastCheck" />
    <!-- ป๊อปอัพ -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/pop_up"
        android:gravity="center"
        android:padding="16dp"
        >

        <!-- ชื่อป๊อปอัพ -->
        <ImageButton
            android:id="@+id/soundbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/sound_btn"
            android:src="@drawable/soundopen"  android:minHeight="@dimen/project_touch_target" />

        <!-- ปุ่มรีซูม -->
        <ImageButton
            android:id="@+id/resumebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/resume"
            android:contentDescription="@string/resume_btn"  android:minHeight="@dimen/project_touch_target" />

        <ImageButton
            android:id="@+id/exitbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@drawable/exit"
            android:contentDescription="@string/exit_btn"  android:minHeight="@dimen/project_touch_target" />
    </LinearLayout>
</LinearLayout>